--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
         "php": "^8.2",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
-        "tinymce/tinymce": "^7.6",
-      "": ""
+        "laravel/ui": "^4.6",
+        "tinymce/tinymce": "^7.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
